[gd_scene load_steps=3 format=3 uid="uid://bkk4mi8n38ki3"]

[ext_resource type="Script" path="res://Blocks/blocks.gd" id="1_6fmvw"]
[ext_resource type="PackedScene" uid="uid://bsaeeaqcrl2i8" path="res://Blocks/block.tscn" id="2_xqrvj"]

[node name="blocks" type="Node2D"]
position = Vector2(80, 80)
script = ExtResource("1_6fmvw")
type = 4
metadata/_edit_group_ = true

[node name="sprites" type="Node2D" parent="."]
position = Vector2(0, -32)

[node name="block" parent="sprites" instance=ExtResource("2_xqrvj")]

[node name="block2" parent="sprites" instance=ExtResource("2_xqrvj")]
position = Vector2(0, 32)

[node name="block3" parent="sprites" instance=ExtResource("2_xqrvj")]
position = Vector2(32, 0)

[node name="block4" parent="sprites" instance=ExtResource("2_xqrvj")]
position = Vector2(-32, 0)

[node name="sprites_position" type="Node2D" parent="."]

[node name="pos1" type="Node2D" parent="sprites_position"]
position = Vector2(-32, 0)

[node name="pos2" type="Node2D" parent="sprites_position"]
position = Vector2(32, 0)

[node name="pos3" type="Node2D" parent="sprites_position"]
position = Vector2(-32, 32)

[node name="pos4" type="Node2D" parent="sprites_position"]
position = Vector2(32, 32)

[node name="pos5" type="Node2D" parent="sprites_position"]
position = Vector2(0, 64)

[node name="pos6" type="Node2D" parent="sprites_position"]
position = Vector2(0, 96)

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
